--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="modal-content" id = "modal-content">
         <span class="close">&times;</span>
           <img id = "modal-img" src="" alt="">
-          <span class="nextSpan" id = "nextSpan" url = "">></span>
+          <!-- <span class="nextSpan" id = "nextSpan" url = "">></span> -->
       </div>
     </div>
     <section id = "work">
