Creando objetos para las imagenes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <!-- App Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
   </head>
-  <body>
+  <body id = "body">
     <!-- ESCRIBE TU CÓDIGO AQUÍ -->
     <header>
       <div class="menu container">
@@ -63,7 +63,7 @@
         <span class="close">&times;</span>
           <img id = "modal-img" src="" alt="">
 
-          <span class="nextSpan" id = "nextSpan" url = "">></span>
+          <span class="nextSpan" id = "" url = "">></span>
 
       </div>
     </div>
